# n2s-estimator

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  CHANGELOG.md  Makefile  QA_SUMMARY.md  README.md  TREE.md  mypy.ini  pyproject.toml  requirements.txt  run_app.sh
docs/: USER_GUIDE.md
src/n2s_estimator/: __init__.py
src/n2s_estimator/data/: create_workbook.py  n2s_estimator.xlsx
src/n2s_estimator/engine/: __init__.py  addons.py  datatypes.py  estimator.py  loader.py  orchestrator.py  pricing.py  validators.py
src/n2s_estimator/export/: __init__.py  excel.py
src/n2s_estimator/ui/: __init__.py  main.py
tests/: __init__.py  test_e2e.py  test_loaders.py  test_math.py  test_scenario_management.py
